Adds mass request
