# core/pkg/modules/models.go
@@ -24,6 +24,18 @@ type DetectionRequest struct {
 	Content string `json:"content" example:"This is the content to be analyzed."`
 }
 
+// MassDetectionStatusRequest represents a mass status request
+// @Description MassDetectionStatusRequest contains the userId UUID.
+type MassDetectionStatusRequest struct {
+	// Is generated
+	RequestId uuid.UUID `json:"-"`
+
+	// UserId for filtering detection statusses
+	// required: false
+	// example: f47ac10b-58cc-4372-a567-0e02b2c3d479
+	UserId uuid.UUID `json:"user_id"`
+}
+
 // MarshalJSON This is crutch to pass RequestId to RabbitMQ, but to ignore it from incoming messages and swagger.
 func (dr DetectionRequest) MarshalJSON() ([]byte, error) {
 	type Alias DetectionRequest
@@ -73,6 +85,6 @@ type Label struct {
 }
 
 type ClientToServer struct {
-	Ret chan<- DetectionStatus
+	Ret chan<- any
 	Msg any
 }
